--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Cursor Apocalypse + Confetti Chaos</title>
+<title>Cursor + Confetti Color Chaos</title>
 
 <!-- Confetti library -->
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
@@ -14,22 +14,23 @@
     height: 100vh;
     background: #000;
     overflow: hidden;
-    cursor: none;           /* Hide real cursor */
+    cursor: none;
     font-family: Arial, Helvetica, sans-serif;
-    touch-action: none;     /* Better mobile experience */
+    touch-action: none;
   }
 
   .cursor {
     position: absolute;
-    width: 38px;
-    height: 38px;
+    width: 42px;
+    height: 42px;
     pointer-events: none;
     background: url('https://cur.cursors-4u.net/cursors/cur-9/cur817.cur') no-repeat center center;
     background-size: contain;
     transform: translate(-50%, -50%);
     z-index: 9999;
     will-change: transform;
-    transition: opacity 2s ease-out;
+    filter: drop-shadow(0 0 8px currentColor);
+    transition: opacity 2.5s ease-out, color 0.6s ease;
   }
 
   .cursor.fade-out {
@@ -42,8 +43,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
     color: #0ff;
-    font-size: clamp(2.5rem, 7vw, 5.5rem);
-    text-shadow: 0 0 20px #0ff, 0 0 40px #f0f;
+    font-size: clamp(2.8rem, 8vw, 6rem);
+    text-shadow: 0 0 25px #0ff, 0 0 50px #f0f;
     pointer-events: none;
     user-select: none;
     text-align: center;
@@ -56,9 +57,9 @@
     top: 20px;
     right: 30px;
     color: #fff;
-    font-size: 2rem;
+    font-size: 2.2rem;
     font-weight: bold;
-    text-shadow: 0 0 15px #f0f, 0 0 30px #0ff;
+    text-shadow: 0 0 15px #f0f, 0 0 35px #0ff;
     z-index: 10000;
     pointer-events: none;
   }
@@ -67,27 +68,47 @@
 <body>
 
 <div class="count" id="count">Cursors: 1</div>
-<h1>click everywhere...<br>embrace the chaos</h1>
+<h1>click & watch the rainbow takeover</h1>
 
 <script>
-// Cursor tracking
+// Confetti + cursor colors palette (matching each other)
+const COLOR_PALETTE = [
+  '#ff3366',  // hot pink
+  '#00ffff',  // cyan
+  '#ffff00',  // bright yellow
+  '#ff69b4',  // hot magenta
+  '#00ff9d',  // neon mint
+  '#9d00ff',  // electric purple
+  '#fff200'   // acid yellow
+];
+
 let cursorCount = 1;
 const countDisplay = document.getElementById('count');
-const cursors = []; // {element, offsetX, offsetY}
+const cursors = [];
+
+// Initial "real" cursor with random color
+const initialCursor = document.createElement('div');
+initialCursor.className = 'cursor';
+initialCursor.style.color = COLOR_PALETTE[Math.floor(Math.random() * COLOR_PALETTE.length)];
+document.body.appendChild(initialCursor);
+
+cursors.push({
+  element: initialCursor,
+  offsetX: 0,
+  offsetY: 0
+});
 
 document.addEventListener('mousemove', (e) => {
-  // Move "real" cursor (first one)
-  if (cursors.length > 0) {
-    cursors[0].element.style.left = e.clientX + 'px';
-    cursors[0].element.style.top  = e.clientY + 'px';
-  }
+  // Move real cursor
+  cursors[0].element.style.left = e.clientX + 'px';
+  cursors[0].element.style.top  = e.clientY + 'px';
 
   // Fake cursors follow with delay + wobble
   cursors.forEach((c, i) => {
     if (i === 0) return;
     
-    const delay = 40 + i * 6;
-    const wobble = Math.sin(Date.now() * 0.002 + i) * 14;
+    const delay = 50 + i * 7;
+    const wobble = Math.sin(Date.now() * 0.0025 + i) * 16;
 
     setTimeout(() => {
       c.element.style.left = (e.clientX + c.offsetX + wobble) + 'px';
@@ -96,17 +117,19 @@ document.addEventListener('mousemove', (e) => {
   });
 });
 
-// ================== CLICK = CURSOR + CONFETTI ==================
+// CLICK → new cursor + confetti + matching colors!
 document.addEventListener('click', (e) => {
   cursorCount++;
   countDisplay.textContent = `Cursors: ${cursorCount}`;
 
-  // 1. Spawn new cursed cursor
+  // New cursor with RANDOM color from the palette
   const newCursor = document.createElement('div');
   newCursor.className = 'cursor';
+  const randomColor = COLOR_PALETTE[Math.floor(Math.random() * COLOR_PALETTE.length)];
+  newCursor.style.color = randomColor;
   
-  const offsetX = (Math.random() - 0.5) * 100;
-  const offsetY = (Math.random() - 0.5) * 100;
+  const offsetX = (Math.random() - 0.5) * 110;
+  const offsetY = (Math.random() - 0.5) * 110;
   
   newCursor.style.left = e.clientX + 'px';
   newCursor.style.top  = e.clientY + 'px';
@@ -115,53 +138,47 @@ document.addEventListener('click', (e) => {
 
   cursors.push({ element: newCursor, offsetX, offsetY });
 
-  // 2. Confetti explosion!
-  const colors = ['#ff0', '#f0f', '#0ff', '#ff69b4', '#00ff9d', '#fff200', '#ff3366'];
-
-  // Big central burst
+  // Confetti explosion using THE SAME color palette
   confetti({
-    particleCount: 80,
-    spread: 100,
-    startVelocity: 45,
+    particleCount: 90,
+    spread: 110,
+    startVelocity: 50,
     origin: { x: e.clientX / window.innerWidth, y: e.clientY / window.innerHeight },
-    colors,
-    ticks: 500
-  });
-
-  // Side sprays
-  confetti({
-    particleCount: 40,
-    angle: 60,
-    spread: 80,
-    origin: { x: (e.clientX - 100) / window.innerWidth, y: e.clientY / window.innerHeight },
-    colors
+    colors: COLOR_PALETTE,
+    ticks: 600
   });
 
   confetti({
-    particleCount: 40,
-    angle: 120,
-    spread: 80,
-    origin: { x: (e.clientX + 100) / window.innerWidth, y: e.clientY / window.innerHeight },
-    colors
+    particleCount: 50,
+    angle: 65,
+    spread: 90,
+    origin: { x: (e.clientX - 120) / window.innerWidth, y: e.clientY / window.innerHeight },
+    colors: COLOR_PALETTE
   });
 
-  // Optional mercy (uncomment if you want oldest cursors to disappear after ~120)
-  /*
-  if (cursors.length > 120) {
-    const oldest = cursors.shift();
-    oldest.element.classList.add('fade-out');
-    setTimeout(() => oldest.element.remove(), 2200);
-  }
-  */
+  confetti({
+    particleCount: 50,
+    angle: 115,
+    spread: 90,
+    origin: { x: (e.clientX + 120) / window.innerWidth, y: e.clientY / window.innerHeight },
+    colors: COLOR_PALETTE
+  });
 });
 
-// Mobile/touch support
+// Touch support for mobile
 document.addEventListener('touchstart', (e) => {
   e.preventDefault();
   const touch = e.touches[0];
   const fakeEvent = { clientX: touch.clientX, clientY: touch.clientY };
   document.dispatchEvent(new MouseEvent('click', fakeEvent));
 }, { passive: false });
+
+// Optional mercy mode (uncomment to fade out oldest cursors after ~150)
+// if (cursors.length > 150) {
+//   const oldest = cursors.shift();
+//   oldest.element.classList.add('fade-out');
+//   setTimeout(() => oldest.element.remove(), 2800);
+// }
 
 </script>
 </body>
